# EMG

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  compile.sh  dependencies.sh  emg.js  index.htm  install.sh  load.js  macdep.sh  main.js  package.json  preload.js  rt64.sh
assets/: CMakeLists.txt  compile.sh
assets/scripts/: m64p_build.sh  m64p_get.sh  m64p_update.sh
assets/sh/: CMakeLists.txt  compile.sh  linux.sh  windows.sh
assets/sh/Windows/: CMakeLists.txt  win32.sh
assets/sh/Windows/Source/: CMakeLists.txt
resources/app/: emg.css  emg.htm  emg.js  index.htm  load.js  main.js  package.json  preload.js  server-config.js  server.js
resources/app/style/: emg.css  ghostly.css
source/mupen64plus-core/data/: mupen64plus.ini
source/mupen64plus-core/src/device/cart/: cart_rom.c
source/mupen64plus-core/src/main/: main.c  rom.c
source/mupen64plus-input-gca/src/: adapter.rs  debug.rs  lib.rs
source/mupen64plus-input-gca/tests/: input.rs
source/mupen64plus-input-raphnetraw/projects/unix/: Makefile
source/mupen64plus-input-sdl/src/: plugin.c
source/mupen64plus-rsp-cxd4/: appveyor.yml  module.c
source/mupen64plus-rsp-cxd4/.github/workflows/: build.yml  schedule.yml
source/mupen64plus-rsp-hle/src/: hle.c  hle_internal.h  plugin.c
source/mupen64plus-rsp-parallel/: CMakeLists.txt  CREDITS.txt  parallel.cpp
source/mupen64plus-rsp-z64/.github/workflows/: build.yml  schedule.yml
source/mupen64plus-rsp-z64/projects/unix/: Makefile
source/mupen64plus-rsp-z64/src/: main_rsp.cpp
source/mupen64plus-video-GLideN64/ini/: GLideN64.custom.ini
source/mupen64plus-video-GLideN64/src/: CMakeLists.txt  Config.h  DisplayWindow.cpp  GBI.cpp
source/mupen64plus-video-GLideN64/src/GLideNHQ/: TxFilter.cpp
source/mupen64plus-video-GLideN64/src/GLideNUI/: ConfigDialog.cpp  configDialog.ui
source/mupen64plus-video-GLideN64/src/GLideNUI-wtl/: config-video.cpp
source/mupen64plus-video-GLideN64/src/Graphics/OpenGLContext/mupen64plus/: mupen64plus_DisplayWindow.cpp
source/mupen64plus-video-GLideN64/src/mupenplus/: Config_mupenplus.cpp
source/mupen64plus-video-GLideN64/src/xxHash/: xxhash.h
source/mupen64plus-video-GLideN64/translations/: gliden64_zh.ts
source/mupen64plus-video-angrylion-plus/: CMakeLists.txt  git-version.cmake
source/mupen64plus-video-angrylion-plus/.github/workflows/: build.yml
source/mupen64plus-video-angrylion-plus/src/core/: version.h.in
source/mupen64plus-video-angrylion-plus/src/plugin/mupen64plus/: gfx_m64p.c
source/mupen64plus-video-glide64mk2/.github/workflows/: build.yml
source/mupen64plus-video-glide64mk2/src/Glitch64/: OGLglitchmain.cpp
source/mupen64plus-video-parallel/: CMakeLists.txt  gfx_m64p.cpp  gfx_m64p.h  glguts.c  parallel_imp.cpp  parallel_imp.h  screen.c
source/mupen64plus-video-parallel/UserInterface/: MainDialog.cpp  MainDialog.ui
source/mupen64plus-video-rice/.github/workflows/: build.yml
source/mupen64plus-video-rice/src/: OGLGraphicsContext.cpp  RSP_Parser.cpp  Video.cpp  version.h
source/sdl-jstest/: CMakeLists.txt  README.md  sdl2-jstest.c
style/: emg.css
tools/icon/: emg.icns  mupen64plus.icns
tools/info/: EMG.plist
