cmake_minimum_required(VERSION 3.15)

project(m64p)

find_package(Git REQUIRED)
execute_process(
    COMMAND ${GIT_EXECUTABLE} describe --tags --always
    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
    OUTPUT_VARIABLE GIT_VERSION
    ERROR_QUIET
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

set(PORTABLE_INSTALL ON)
set(CMAKE_INSTALL_PREFIX "")
set(INSTALL_PATH "EMG/resources/app/m64p")

add_custom_target(bundle_dependencies
	COMMAND "${CMAKE_SOURCE_DIR}/dependencies.sh" "${CMAKE_SOURCE_DIR}/EMG/resources/app/m64p/mupen64plus.exe" "${CMAKE_SOURCE_DIR}/EMG/resources/app/m64p" "/mingw64/bin"
)

add_subdirectory(Source)
install(FILES ${MUPEN64PLUSCORE_LIB}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUSCORE_INI} ${MUPEN64PLUSCORE_CHT} ${MUPEN64PLUSCORE_FONT}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_UI}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_RSP_CXD4}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_RSP_HLE}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_RSP_PARALLEL}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_INPUT_SDL}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_INPUT_RAPHNET}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_INPUT_GCA}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_GFX_ANGRYLION}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_GFX_GLIDEN64}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_GFX_PARALLEL}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_GFX_RICE}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${MUPEN64PLUS_PLUGIN_AUDIO_SDL}
    DESTINATION ${INSTALL_PATH}
)
install(FILES ${SDL_JSTEST}
    DESTINATION ${INSTALL_PATH}
)